--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,1 +1,2 @@
-USER_DB_DSN="xxx:yyyy@tcp(127.0.0.1:3306)/dddd?charset=utf8mb4&parseTime=True&loc=Local"
+USER_WRITE_DB_DSN="xxx:yyyy@tcp(127.0.0.1:3306)/dddd?charset=utf8mb4&parseTime=True&loc=Local"
+USER_READ_DB_DSN="xxx:yyyy@tcp(127.0.0.1:3306)/dddd?charset=utf8mb4&parseTime=True&loc=Local"
