feat: Add access/post logger

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,2 +1,3 @@
 USER_WRITE_DB_DSN="xxx:yyyy@tcp(127.0.0.1:3306)/dddd?charset=utf8mb4&parseTime=True&loc=Local"
 USER_READ_DB_DSN="xxx:yyyy@tcp(127.0.0.1:3306)/dddd?charset=utf8mb4&parseTime=True&loc=Local"
+LOG_DIR="/pwd/log/dir"
