--- a/.golangci.yml
+++ b/.golangci.yml
@@ -163,6 +163,17 @@ linters-settings:
     # Force newlines in end of case at this limit (0 = never).
     force-case-trailing-whitespace: 0
 
+  gci:
+    sections:
+      - standard
+      - blank
+      - prefix(cypt) # this module name
+      - blank
+      - default
+    # If `true`, make the section order the same as the order of `sections`.
+    # Default: false
+    custom-order: true
+
 # See https://golangci-lint.run/usage/linters/
 linters:
   # Disable all linters.
